--- a/stash_engine/ui-library/scss/_headings.scss
+++ b/stash_engine/ui-library/scss/_headings.scss
@@ -17,7 +17,7 @@
 }
 
 %o-heading__level2 {
-  margin: 0 0 $spacing-md;
+  margin: 12px 0 $spacing-md;
   color: $design-dark-blue-color;
   font-size: 1.3em;
   font-weight: normal;
